# VORA-Vision

./: .gitignore  Cargo.toml  EULA.txt  README.md  installer.nsi  logo.txt
src/: app.rs  cache.rs  logger.rs  main.rs  models.rs
src/data/: edgar.rs  finnhub.rs  fred.rs  mod.rs  yahoo.rs
src/scoring/: engine.rs  explain.rs  mod.rs  news.rs  normalize.rs  signal.rs  weights.rs
src/sim/: backtest.rs  calibrate.rs  data.rs  metrics.rs  mod.rs  paper.rs  portfolio.rs  runner.rs
src/ui/: backtest.rs  calibrate.rs  compare.rs  error.rs  input.rs  loading.rs  mod.rs  paper.rs  results.rs
