[package]
name = "vora-vision"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# JSON serialization / deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI framework
ratatui = "0.28"
crossterm = "0.27"

# Yahoo Finance unofficial API wrapper
yahoo_finance_api = "2"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
